--- a/btsp.html
+++ b/btsp.html
@@ -24,7 +24,7 @@
         font-family: lato;
       }
     </style>
-    <title>Form Design</title>
+    <title>International Relations Cell</title>
   </head>
   <body>
     <div class="container-fluid bg-dark text-light py-3">
